Fix naming issues
Fix naming issues on navbar, home page and icon.

--- a/src/app/help/help.component.html
+++ b/src/app/help/help.component.html
@@ -7,7 +7,7 @@
       <h2>Get Help with Scams</h2>
       <h3>Scam Help</h3>
       <p>If you need help with scams, please reference the Get Help section on the home page.</p>
-      <h2>How to use Scam Guard</h2>
+      <h2>How to use Scam Sentinel</h2>
       <h3>What are the three golden rules?</h3>
       <p>The three golden rules are three important rules that you should follow online to avoid scams.</p>
       <h2>About Scam Guard</h2>
