--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div id="home_container">
   <div id="home_header">
     <div id="logo_title_container">
-      <h2>Scam Guard</h2>
+      <h2>Scam Sentinel</h2>
     </div>
     <nav>
       <ul class="navigation_bar">
