--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav>
   <div id="navbar_title_container" routerLink="/home">
-    <h2>Scam Guard</h2>
+    <h2>Scam Sentinel</h2>
   </div>
   <ul class="navigation_bar">
     <li>
