--- a/src/app/help/help.component.html
+++ b/src/app/help/help.component.html
@@ -10,7 +10,7 @@
       <h2>How to use Scam Sentinel</h2>
       <h3>What are the three golden rules?</h3>
       <p>The three golden rules are three important rules that you should follow online to avoid scams.</p>
-      <h2>About Scam Guard</h2>
+      <h2>About Scam Sentinel</h2>
       <h3>Was this really made by highschool students?</h3>
       <p>This website was completely written, designed and programmed by two highschool students. There was no adult assistance at all. The only code not written by us is linked below:</p>
       <a href="https://angular.io/">Angular 6 Framework</a><br><a href="https://codepen.io/anon/pen/dqNvvd">Text Message Bubbles</a><br><a href="https://material.angular.io/">Information/Navigation Tabs, Tooltips & Cards</a>
