--- a/src/app/golden-rule/lesson/lesson.component.html
+++ b/src/app/golden-rule/lesson/lesson.component.html
@@ -12,7 +12,8 @@
 <div *ngIf="lessonData">
 
   <!-- EMAIL  -->
-  <div id="email_container" *ngIf="lessonData.type == 'Email'">
+  <div id="email_container" *ngIf="getStepType() == 'Email'">
+    <div id="email_header"><h2>S-Mail</h2></div>
     <div id="email_wrapper">
       <div>
         <h2>Inbox</h2>
@@ -32,6 +33,7 @@
       </div>
       <div id="email_pane">
         <div id="email_pane_wrapper" *ngIf="showEmailPane && itemDisplay[emailSelected]">
+            <div id="delete_button" matTooltip="Delete" matTooltipPosition="left"><img src="../../../assets/images/delete.png"></div>
           <div id="email_pane_header">
             <h3 id="email_pane_subject">{{ itemDisplay[emailSelected].subject }}</h3>
             <h4 id="email_pane_sender" [matTooltip]="itemDisplay[emailSelected].email" matTooltipPosition="above">{{ itemDisplay[emailSelected].sender }} - {{ itemDisplay[emailSelected].time}}</h4>
@@ -43,9 +45,9 @@
   </div>
 
   <!-- DIRECT MESSAGE -->
-  <div id="dm_container" *ngIf="lessonData.type == 'Direct Message'">
+  <div id="dm_container" *ngIf="getStepType() == 'Direct Message'">
     <div id="dm_wrapper">
-      <div class="header"><span class="left">Messages</span><h2>Scammer</h2><span class="right">Contact</span></div>
+      <div class="header"><span class="left" (click)="onChangeStep([{rule: 1, lesson: 2, step: 0}])">Messages</span><h2>{{ stepData.contact }}</h2><span class="right">Contact</span></div>
       <div class="messages_wrapper">
         <div class="message_seperator" *ngFor="let message of itemDisplay" [ngStyle]="{'align-self': message.sent == 'from' ? 'flex-end' : 'flex-start' }">
           <div class="message" [ngClass]="{'to': message.sent == 'to', 'from': message.sent == 'from'}">{{ message.text }}</div>
