--- a/src/app/golden-rule/lesson/lesson.component.css
+++ b/src/app/golden-rule/lesson/lesson.component.css
@@ -225,24 +225,16 @@ ul#email_list {
     height: 400px;
 }
 
-#email_pane_data::-webkit-scrollbar-track
-{
-	box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	border-radius: 10px;
-	background-color: #F5F5F5;
-}
-
 #email_pane_data::-webkit-scrollbar
 {
-	width: 12px;
-	background-color: #F5F5F5;
+    width: 7px;
+    background-color: #fff;
 }
 
 #email_pane_data::-webkit-scrollbar-thumb
 {
-	border-radius: 10px;
-	box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: #555;
+    background-color: #aaa;
+    border-radius: 4px;
 }
 
 .email_unread h4, .email_unread h5 {
@@ -260,6 +252,15 @@ ul#email_list {
     }
     ul#email_list {
         width: 200px;
+    }
+}
+
+@media only screen and (max-height: 750px) {
+    #email_wrapper {
+        height: 475px;
+    }
+    #email_pane_data {
+        height: 350px;
     }
 }
 
