--- a/src/app/golden-rule/lesson/lesson.component.html
+++ b/src/app/golden-rule/lesson/lesson.component.html
@@ -3,7 +3,7 @@
   <h1>Golden Rule #{{ ruleData.number }}</h1>
   <p id="rule_description">{{ ruleData.description }}</p>
   <hr>
-  <div id="start_button" [routerLink]="['/goldenrule', ruleData.number, 1, 0]">
+  <div id="start_button" (click)="onChangeStep([{rule: goldenRuleNumber, lesson: 0, step: 0}])">
     START
   </div>
 </div>
@@ -12,14 +12,14 @@
 <div *ngIf="lessonData">
 
   <!-- EMAIL  -->
-  <div id="email_container" *ngIf="getStepType() == 'Email'">
+  <div id="email_container" *ngIf="getStepType() == 'Email'" (click)="onChangeStep([{rule: 1, lesson: 2, step: 1}])">
     <div id="email_header"><h2>S-Mail</h2></div>
     <div id="email_wrapper">
       <div>
         <h2>Inbox</h2>
         <ul id="email_list">
           <li *ngFor="let message of itemDisplay; let i = index"
-          (click)="onEmailSelect(i)"
+          (click)="onEmailSelect(i, message.subject)"
           [ngClass]="{'active_email': i == emailSelected && showEmailPane, 'email_unread' : unreadList[i]}">
             <div>
               <h3>{{ message.sender }}</h3>
@@ -50,7 +50,7 @@
       <div class="header"><span class="left" (click)="onChangeStep([{rule: 1, lesson: 2, step: 0}])">Messages</span><h2>{{ stepData.contact }}</h2><span class="right">Contact</span></div>
       <div class="messages_wrapper">
         <div class="message_seperator" *ngFor="let message of itemDisplay" [ngStyle]="{'align-self': message.sent == 'from' ? 'flex-end' : 'flex-start' }">
-          <div class="message" [ngClass]="{'to': message.sent == 'to', 'from': message.sent == 'from'}">{{ message.text }}</div>
+          <div class="message" [ngClass]="{'to': message.sent == 'to', 'from': message.sent == 'from'}" [innerHtml]="message.text"></div>
         </div>
       </div>
       <div class="footer">
