--- a/src/app/help/help.component.html
+++ b/src/app/help/help.component.html
@@ -10,6 +10,12 @@
       <h2>How to use Scam Sentinel</h2>
       <h3>What are the three golden rules?</h3>
       <p>The three golden rules are three important rules that you should follow online to avoid scams.</p>
+      <h3>What are activities/lessons?</h3>
+      <p>Activities, or lessons, are short tutorials about a particular type of scam.</p>
+      <h3>How do I progress?</h3>
+      <p>In order to progress, read the information, and then complete the task at the bottom in italics.</p>
+      <h3>I can't see the instructions</h3>
+      <p>Scroll down in the panel, as the content may have been bigger than the container.</p>
       <h2>About Scam Sentinel</h2>
       <h3>Was this really made by highschool students?</h3>
       <p>This website was completely written, designed and programmed by two highschool students. There was no adult assistance at all. The only code not written by us is linked below:</p>
